--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: llmops-app
-        image: tushar2301/studdybuddy:latest
+        image: tushar2301/studdybuddy:v3
         ports:
         - containerPort: 8501
         env:
