Update image tag to v6

--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: llmops-app
-        image: tushar2301/studdybuddy:__IMAGE_TAG__
+        image: tushar2301/studdybuddy:v6
         ports:
         - containerPort: 8501
         env:
